<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3D9E0"
    tools:context=".ui.quoteDisplay.QuoteActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/inspire_me_quotes"
        android:textColor="#FF5722"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quoteSectionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/dummy_quote"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toTopOf="@id/quoteSectionLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quoteAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/dummy_author"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/quoteText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newQuoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#33B5E5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/get_random_quote_text"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_variant"
            android:textColorHint="#694949"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/quoteAuthor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shareQuoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#33B5E5"
            android:drawableEnd="@drawable/share_icon"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share_quote_text"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_variant"
            android:textColorHint="#694949"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/quoteSectionLayout"
            app:layout_constraintStart_toStartOf="@id/quoteSectionLayout"
            app:layout_constraintTop_toBottomOf="@id/newQuoteButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>